# MergenVisionDemo

./: .env.example  .gitignore  Makefile  agents.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1.py  363a56874e2e_add_approved_phase1_tables.py  85ed4cc8d05d_extend_process_status_for_bulk_jobs.py
backend/app/: lifespan.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py  errors.py  ids.py  security.py
backend/app/domain/: models.py
backend/app/infrastructure/: db.py  minio.py  qdrant.py
backend/app/ml/: alignment.py  engine_reuse.py  pipeline.py  postprocess.py  preprocess.py  trt_engine.py
backend/app/schemas/: face.py  stats.py
backend/app/services/: bulk_enrollment.py  bulk_manifest.py  bulk_orchestrator.py  face_service.py  readiness.py  vggface_manifest.py  vggface_manifest_cache.py
backend/app/workers/: __init__.py  gpu_worker.py
backend/docs/implementation/: CURRENT_SPRINT.md  IMPLEMENTATION_DETAILS.md  REFERENCE_DECISION_LOG.md
backend/native/mergenvision_gpu/: CMakeLists.txt  __init__.py  pyproject.toml
backend/scripts/: benchmark_bulk_enroll.py  benchmark_bulk_enroll_multiprocess.py  benchmark_bulk_enroll_production.py  build_engines.py  build_retinaface_engine.py  casia_speed.py  concurrent_jobs_test.py  diag_alicia.py  diag_avril.py  download_models.py  download_samples.py  inspect_models.py  lfw_threshold_analysis.py  offline_casia.py  profile_compute_only.py  profile_decoder_batch.py  profile_extract_batch.py  reset_active_demo_data.py  test_cvcuda_batch.py  test_cvcuda_export.py  test_cvcuda_tensorbatch.py  test_cvcuda_varbatch.py  verify_gpu_worker_topology.py  verify_retinaface_pipeline.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py
backend/tests/integration/: test_db.py  test_minio.py  test_qdrant.py  (+1 more)
(+98 files in other folders)
