[project]
name = "mergenvision-backend"
version = "0.1.0"
description = "MergenVision Demo backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "minio>=7.2.0",
    "qdrant-client>=1.10.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
    "onnx>=1.16.0",
    "tensorrt==10.3.0",
    "cuda-python>=13.0",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

